force-app/main/default/objects/Access_Request__c/Access_Request__c.object-meta.xml
<CustomObject>
    <label>Access Request</label>
    <nameField>
        <displayFormat>AR-{0000}</displayFormat>
        <label>Access Request #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Access Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>