force-app/main/default/objects/Access_Request__c/fields/Clone_ID__c.field-meta.xml
<CustomField>
    <fullName>Clone_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clone ID</label>
    <referenceTo>Access_Request__c</referenceTo>
    <relationshipLabel>Access Request</relationshipLabel>
    <relationshipName>Access_Request</relationshipName>
    <type>Lookup</type>
</CustomField>