force-app/main/default/objects/Access_Request__c/fields/Deactivate__c.field-meta.xml
<CustomField>
    <fullName>Deactivate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deactivate</label>
    <type>Checkbox</type>
</CustomField>