force-app/main/default/objects/Access_Request__c/fields/Domain_ID__c.field-meta.xml
<CustomField>
    <fullName>Domain_ID__c</fullName>
    <label>Domain ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>