force-app/main/default/objects/Access_Request__c/fields/Implementation_Manager__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Implementation Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Access_Request</relationshipName>
    <type>Lookup</type>
</CustomField>