force-app/main/default/objects/Access_Request__c/fields/Request_Description__c.field-meta.xml
<CustomField>
    <fullName>Request_Description__c</fullName>
    <label>Request Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>