force-app/main/default/objects/Access_Request__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Task</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Task__c.SOE__c</field>
            <operation>equals</operation>
            <valueField>$Source.SOE__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Task__c</referenceTo>
    <relationshipLabel>Access Request</relationshipLabel>
    <relationshipName>Access_Request</relationshipName>
    <type>Lookup</type>
</CustomField>