force-app/main/default/objects/Access_Request__c/validationRules/SOE_Cannot_be_changed_after_created.validationRule-meta.xml
<ValidationRule>
    <fullName>SOE_Cannot_be_changed_after_created</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(SOE__c  )</errorConditionFormula>
    <errorMessage>SOE Cannot be changed after Acess Request is Created.</errorMessage>
</ValidationRule>