force-app/main/default/objects/Access_Request__c/validationRules/Validation_on_End_Date_1.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_on_End_Date_1</fullName>
    <active>true</active>
    <errorConditionFormula>End_Time__c &lt;=  Start_Time__c</errorConditionFormula>
    <errorDisplayField>End_Time__c</errorDisplayField>
    <errorMessage>End Time must be greater than Start Time.</errorMessage>
</ValidationRule>