force-app/main/default/objects/Access_Request__c/validationRules/Validation_on_Start_Date_1.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_on_Start_Date_1</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Time__c &lt;  NOW()</errorConditionFormula>
    <errorDisplayField>Start_Time__c</errorDisplayField>
    <errorMessage>Start Time should not be in the Past.</errorMessage>
</ValidationRule>