force-app/main/default/objects/Access_Request__c/validationRules/Validation_on_Start_Date_2.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_on_Start_Date_2</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Time__c &lt;  SOE__r.Baseline_Start__c</errorConditionFormula>
    <errorMessage>Start Time should be greater than selected SOE Baseline Start date.</errorMessage>
</ValidationRule>