force-app/main/default/objects/Access_Request__c/validationRules/Validation_Rule_on_Domain_ID.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Rule_on_Domain_ID</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Domain__c,&#39;Other&#39;),ISBLANK(Domain_ID__c))</errorConditionFormula>
    <errorDisplayField>Domain_ID__c</errorDisplayField>
    <errorMessage>Domain ID field Should Not Be Empty</errorMessage>
</ValidationRule>