force-app/main/default/objects/Access_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Request_Raised_Status__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>SOE__c</columns>
    <columns>Domain__c</columns>
    <columns>Implementation_Manager__c</columns>
    <columns>Task__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>